--- a/content/post/2022-01-26-animals-ethics/animals.bib
+++ b/content/post/2022-01-26-animals-ethics/animals.bib
@@ -4,6 +4,7 @@
   year = {2019},
   month = apr,
   publisher = {{Sentience Institute}},
+  urldate = {2022-01-26},
   abstract = {We estimate that 99\% of US farmed animals are living in factory farms at present. By species, we estimate that 70.4\% of cows, 98.3\% of pigs, 99.8\% of turkeys, 98.2\% of chickens raised for eggs, and over 99.9\% of chickens raised for meat are living in factory farms. Based on the confinement and living conditions of farmed fish, we estimate that virtually all US fish farms are suitably described as factory farms, though there is limited data on fish farm conditions and no standardized definition. Land animal figures use data from the USDA Census of Agriculture and EPA definitions of Concentrated Animal Feeding Operations.},
   langid = {english},
   file = {/Users/nashsauter/Zotero/storage/D7K76B5Q/us-factory-farming-estimates.html}
@@ -15,6 +16,7 @@
   year = {2022},
   month = aug,
   journal = {Pew Research Center's Global Attitudes Project},
+  urldate = {2022-11-23},
   abstract = {Despite the many depressing stories dominating the international news cycle, there is also a note of positivity among survey respondents in views of the UN, the benefits of international cooperation for solving problems and the importance of common values for bringing nations together.},
   langid = {american},
   file = {/Users/nashsauter/Zotero/storage/LPBPXRMJ/climate-change-remains-top-global-threat-across-19-country-survey.html}
@@ -41,6 +43,7 @@
   month = may,
   journal = {The Guardian},
   issn = {0261-3077},
+  urldate = {2022-06-20},
   abstract = {Biggest analysis to date reveals huge footprint of livestock - it provides just 18\% of calories but takes up 83\% of farmland},
   chapter = {Environment},
   langid = {british},
@@ -59,6 +62,7 @@
   pages = {064016},
   issn = {1748-9326},
   doi = {10.1088/1748-9326/aa6cd5},
+  urldate = {2022-06-25},
   keywords = {Antinet,read},
   annotation = {422 citations (Crossref) [2022-07-01]},
   file = {/Users/nashsauter/Zotero/storage/EJBL8NNB/Clark and Tilman - 2017 - Comparative analysis of environmental impacts of a.pdf}
@@ -75,6 +79,7 @@
   pages = {705--708},
   issn = {0036-8075, 1095-9203},
   doi = {10.1126/science.aba7357},
+  urldate = {2022-11-24},
   abstract = {Thought for food                            To have any hope of meeting the central goal of the Paris Agreement, which is to limit global warming to 2\textdegree C or less, our carbon emissions must be reduced considerably, including those coming from agriculture. Clark               et al.               show that even if fossil fuel emissions were eliminated immediately, emissions from the global food system alone would make it impossible to limit warming to 1.5\textdegree C and difficult even to realize the 2\textdegree C target. Thus, major changes in how food is produced are needed if we want to meet the goals of the Paris Agreement.                                         Science               , this issue p.               705                        ,              Concerted efforts to mitigate greenhouse gas emissions from food production are necessary to limit increases in global temperature.           ,              The Paris Agreement's goal of limiting the increase in global temperature to 1.5\textdegree{} or 2\textdegree C above preindustrial levels requires rapid reductions in greenhouse gas emissions. Although reducing emissions from fossil fuels is essential for meeting this goal, other sources of emissions may also preclude its attainment. We show that even if fossil fuel emissions were immediately halted, current trends in global food systems would prevent the achievement of the 1.5\textdegree C target and, by the end of the century, threaten the achievement of the 2\textdegree C target. Meeting the 1.5\textdegree C target requires rapid and ambitious changes to food systems as well as to all nonfood sectors. The 2\textdegree C target could be achieved with less-ambitious changes to food systems, but only if fossil fuel and other nonfood emissions are eliminated soon.},
   langid = {english},
   annotation = {247 citations (Crossref) [2022-11-24]},
@@ -115,6 +120,7 @@
   pages = {198--209},
   issn = {2662-1355},
   doi = {10.1038/s43016-021-00225-9},
+  urldate = {2022-06-27},
   langid = {english},
   keywords = {Antinet,read},
   annotation = {212 citations (Crossref) [2022-07-01]},
@@ -132,8 +138,28 @@
   pages = {68--74},
   issn = {03091740},
   doi = {10/f6tzns},
+  urldate = {2022-01-26},
   langid = {english},
   annotation = {114 citations (Crossref) [2022-07-01]}
+}
+
+@article{fitzgerald2009,
+  title = {Slaughterhouses and {{Increased Crime Rates}}: {{An Empirical Analysis}} of the {{Spillover From}} ``{{The Jungle}}'' {{Into}} the {{Surrounding Community}}},
+  shorttitle = {Slaughterhouses and {{Increased Crime Rates}}},
+  author = {Fitzgerald, Amy J. and Kalof, Linda and Dietz, Thomas},
+  year = {2009},
+  month = jun,
+  journal = {Organization \& Environment},
+  volume = {22},
+  number = {2},
+  pages = {158--184},
+  issn = {1086-0266, 1552-7417},
+  doi = {10.1177/1086026609338164},
+  urldate = {2023-05-17},
+  abstract = {More than 100 years after Upton Sinclair denounced the massive slaughterhouse complex in Chicago as a ``jungle,'' qualitative case study research has documented numerous negative effects of slaughterhouses on workers and communities. Of the social problems observed in these communities, the increases in crime have been particularly dramatic. These increases have been theorized as being linked to the demographic characteristics of the workers, social disorganization in the communities, and increased unemployment rates. But these explanations have not been empirically tested, and no research has addressed the possibility of a link between the increased crime rates and the violent work that takes place in the meatpacking industry. This study uses panel analysis of 1994-2002 data on nonmetropolitan counties in states with ``rightto-work'' laws (a total of 581 counties) to analyze the effect of slaughterhouses on the surrounding communities using both ordinary least squares and negative binomial regression. The findings indicate that slaughterhouse employment increases total arrest rates, arrests for violent crimes, arrests for rape, and arrests for other sex offenses in comparison with other industries. This suggests the existence of a ``Sinclair effect'' unique to the violent workplace of the slaughterhouse, a factor that has not previously been examined in the sociology of violence.},
+  langid = {english},
+  annotation = {67 citations (Crossref) [2023-05-17]},
+  file = {/Users/nashsauter/Zotero/storage/PNDEBQFA/Fitzgerald et al. - 2009 - Slaughterhouses and Increased Crime Rates An Empi.pdf;/Users/nashsauter/Zotero/storage/T4LG9X2N/Fitzgerald et al. - 2009 - Slaughterhouses and Increased Crime Rates An Empi.pdf}
 }
 
 @techreport{fraanje2020,
@@ -144,6 +170,7 @@
   month = jan,
   institution = {{Food Climate Research Network}},
   doi = {10.56661/47e58c32},
+  urldate = {2023-02-02},
   abstract = {The global growth in the production of soy and its use for different types of foods has been, and continues to be, a major contributor to land use change in the Amazon and other regions in South America. This building block explores the connections between soy, land use change, and discussions on animal- versus plant-based protein sources.},
   file = {/Users/nashsauter/Zotero/storage/NPRWYJU5/Fraanje et al. - 2020 - Soy food, feed, and land use change.pdf}
 }
@@ -174,6 +201,7 @@
   pages = {716--738},
   issn = {14647931},
   doi = {10.1111/brv.12251},
+  urldate = {2022-06-24},
   langid = {english},
   annotation = {64 citations (Crossref) [2022-07-01]},
   file = {/Users/nashsauter/Zotero/storage/FYQHCN7P/German et al. - 2017 - Relationships among multiple aspects of agricultur.pdf}
@@ -216,6 +244,7 @@
   pages = {381--391},
   issn = {0948-3349, 1614-7502},
   doi = {10.1007/s11367-009-0091-7},
+  urldate = {2022-06-18},
   langid = {english},
   keywords = {ObsCite},
   annotation = {80 citations (Crossref) [2022-07-01]},
@@ -229,6 +258,23 @@
   editor = {P{\"o}rtner, Hans-Otto and Roberts, Debra Cynthia and Tignor, Melinda M. B. and Poloczanska, Elvira S. and Mintenbeck, Katja and Alegr{\'i}a, Andr{\`e}s and Craig, Marlies and Langsdorf, Stefanie and L{\"o}schke, Sina and M{\"o}ller, Vincent and Okem, Andrew and Rama, Bardhyl},
   year = {2022},
   publisher = {{IPCC}}
+}
+
+@article{jacques2015,
+  title = {The {{Slaughterhouse}}, {{Social Disorganization}}, and {{Violent Crime}} in {{Rural Communities}}},
+  author = {Jacques, Jessica Racine},
+  year = {2015},
+  month = nov,
+  journal = {Society \& Animals},
+  volume = {23},
+  number = {6},
+  pages = {594--612},
+  issn = {1063-1119, 1568-5306},
+  doi = {10.1163/15685306-12341380},
+  urldate = {2023-05-17},
+  abstract = {Scholars in nonhuman animal studies and criminology have argued that more attention should be paid to the violence sanctioned by society, that of animal slaughter for industrial food production. Slaughterhouses and the communities surrounding these facilities present ideal sites for investigating how the violence of nonhuman animal slaughter work impacts individuals and society. The main research questions addressed in this study were whether the presence of a slaughterhouse in a rural community had an effect on violent crime arrest rates and what impact these facilities have on social disorganization in the community. Previous research on slaughterhouse communities has established a correlation between slaughterhouse employment and violent crime. This research examined the relationship between the presence of a slaughterhouse in the community and violent crime rates. Findings indicated that the location of a slaughterhouse in a county was associated with increases in the total arrest rate, arrests for rape, and arrests for offenses against the family in comparison to counties without a slaughterhouse, pointing to a relationship between the violence of killing nonhuman animals and violence towards humans.},
+  annotation = {5 citations (Crossref) [2023-05-17]},
+  file = {/Users/nashsauter/Zotero/storage/3TFMUICG/Jacques - 2015 - The Slaughterhouse, Social Disorganization, and Vi.pdf;/Users/nashsauter/Zotero/storage/EVUWGB42/Jacques - 2015 - The Slaughterhouse, Social Disorganization, and Vi.pdf}
 }
 
 @article{jalil2019,
@@ -252,6 +298,7 @@
   pages = {749--757},
   issn = {00325791},
   doi = {10/gcrqqf},
+  urldate = {2022-01-26},
   langid = {english},
   annotation = {52 citations (Crossref) [2022-07-01]}
 }
@@ -267,6 +314,7 @@
   pages = {156--159},
   issn = {01956663},
   doi = {10/fp3qgs},
+  urldate = {2022-01-26},
   langid = {english},
   annotation = {223 citations (Crossref) [2022-07-01]}
 }
@@ -282,6 +330,7 @@
   pages = {104--108},
   issn = {0963-7214, 1467-8721},
   doi = {10/f5wvcc},
+  urldate = {2022-01-26},
   abstract = {Most people both eat animals and care about animals. Research has begun to examine the psychological processes that allow people to negotiate this ``meat paradox.'' To understand the psychology of eating animals, we examine characteristics of the eaters (people), the eaten (animals), and the eating (the behavior). People who value masculinity, enjoy meat and do not see it as a moral issue, and find dominance and inequality acceptable are most likely to consume animals. Perceiving animals as highly dissimilar to humans and as lacking mental attributes, such as the capacity for pain, also supports meat-eating. In addition to these beliefs, values, and perceptions, the act of eating meat triggers psychological processes that regulate negative emotions associated with eating animals. We conclude by discussing the implications of this research for understanding the psychology of morality.},
   langid = {english},
   annotation = {115 citations (Crossref) [2022-07-01]}
@@ -302,12 +351,31 @@
   file = {/Users/nashsauter/Zotero/storage/NJZQXPIG/Mathur et al. - 2021 - Interventions to reduce meat consumption by appeal.pdf}
 }
 
+@article{melina2016,
+  title = {Position of the {{Academy}} of {{Nutrition}} and {{Dietetics}}: {{Vegetarian Diets}}},
+  shorttitle = {Position of the {{Academy}} of {{Nutrition}} and {{Dietetics}}},
+  author = {Melina, Vesanto and Craig, Winston and Levin, Susan},
+  year = {2016},
+  month = dec,
+  journal = {Journal of the Academy of Nutrition and Dietetics},
+  volume = {116},
+  number = {12},
+  pages = {1970--1980},
+  issn = {22122672},
+  doi = {10.1016/j.jand.2016.09.025},
+  urldate = {2023-06-20},
+  langid = {english},
+  annotation = {596 citations (Crossref) [2023-06-20]},
+  file = {/Users/nashsauter/Zotero/storage/F8PKU599/Melina et al. - 2016 - Position of the Academy of Nutrition and Dietetics.pdf;/Users/nashsauter/Zotero/storage/QGAGNME6/Melina et al. - 2016 - Position of the Academy of Nutrition and Dietetics.pdf}
+}
+
 @misc{noaa21,
   title = {What Is Eutrophication?},
   author = {NOAA},
   year = {21},
   month = feb,
   journal = {National Ocean Service},
+  urldate = {2022-06-24},
   abstract = {Eutrophication is a big word that describes a big problem in the nation's estuaries. Harmful algal blooms, dead zones, and fish kills are the results of the eutrophication process\textemdash which begins with the increased load of nutrients to estuaries and coastal waters.},
   howpublished = {https://oceanservice.noaa.gov/facts/eutrophication.html},
   langid = {american},
@@ -346,6 +414,7 @@
   year = {2020},
   month = sep,
   journal = {The Independent},
+  urldate = {2022-06-20},
   abstract = {Avoiding meat and dairy could reduce your carbon footprint from food by nearly three-quarters},
   chapter = {Lifestyle},
   langid = {english},
@@ -364,6 +433,7 @@
   pages = {987--992},
   issn = {0036-8075, 1095-9203},
   doi = {10.1126/science.aaq0216},
+  urldate = {2022-06-18},
   abstract = {The global impacts of food production             Food is produced and processed by millions of farmers and intermediaries globally, with substantial associated environmental costs. Given the heterogeneity of producers, what is the best way to reduce food's environmental impacts? Poore and Nemecek consolidated data on the multiple environmental impacts of {$\sim$}38,000 farms producing 40 different agricultural goods around the world in a meta-analysis comparing various types of food production systems. The environmental cost of producing the same goods can be highly variable. However, this heterogeneity creates opportunities to target the small numbers of producers that have the most impact.                            Science               , this issue p.               987                        ,              Food producer heterogeneity on a global level creates mitigation opportunities with respect to environmental damage caused by food production.           ,              Food's environmental impacts are created by millions of diverse producers. To identify solutions that are effective under this heterogeneity, we consolidated data covering five environmental indicators; 38,700 farms; and 1600 processors, packaging types, and retailers. Impact can vary 50-fold among producers of the same product, creating substantial mitigation opportunities. However, mitigation is complicated by trade-offs, multiple ways for producers to achieve low impacts, and interactions throughout the supply chain. Producers have limits on how far they can reduce impacts. Most strikingly, impacts of the lowest-impact animal products typically exceed those of vegetable substitutes, providing new evidence for the importance of dietary change. Cumulatively, our findings support an approach where producers monitor their own impacts, flexibly meet environmental targets by choosing from multiple practices, and communicate their impacts to consumers.},
   langid = {english},
   keywords = {Antinet,ObsCite,read},
@@ -382,6 +452,7 @@
   pages = {319--328},
   issn = {2398-9629},
   doi = {10.1038/s41893-020-0483-z},
+  urldate = {2022-06-18},
   langid = {english},
   keywords = {ObsCite},
   annotation = {30 citations (Crossref) [2022-07-01]},
@@ -395,6 +466,7 @@
   year = {2020},
   month = jan,
   journal = {Our World in Data},
+  urldate = {2022-06-24},
   abstract = {`Eat local' is a common recommendation to reduce the carbon footprint of your diet. But transport tends to account for a small share of greenhouse gas emissions. How does the impact of what you eat compare to where it's come from?},
   howpublished = {https://ourworldindata.org/food-choice-vs-eating-local},
   keywords = {Antinet,read},
@@ -412,6 +484,7 @@
   pages = {104511},
   issn = {01956663},
   doi = {10/ggtkkb},
+  urldate = {2022-01-26},
   langid = {english},
   annotation = {54 citations (Crossref) [2022-07-01]}
 }
@@ -427,6 +500,7 @@
   pages = {447--450},
   issn = {01956663},
   doi = {10/cxb468},
+  urldate = {2022-01-26},
   langid = {english},
   annotation = {194 citations (Crossref) [2022-07-01]}
 }
@@ -469,6 +543,7 @@
   pages = {179--192},
   issn = {0165-0009, 1573-1480},
   doi = {10.1007/s10584-014-1169-1},
+  urldate = {2022-06-18},
   langid = {english},
   keywords = {Antinet,ObsCite,read},
   annotation = {290 citations (Crossref) [2022-07-01]},
@@ -486,6 +561,7 @@
   pages = {3804--3809},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.1713820115},
+  urldate = {2022-06-18},
   abstract = {Significance             With a third of all food production lost via leaky supply chains or spoilage, food loss is a key contributor to global food insecurity. Demand for resource-intensive animal-based food further limits food availability. In this paper, we show that plant-based replacements for each of the major animal categories in the United States (beef, pork, dairy, poultry, and eggs) can produce twofold to 20-fold more nutritionally similar food per unit cropland. Replacing all animal-based items with plant-based replacement diets can add enough food to feed 350 million additional people, more than the expected benefits of eliminating all supply chain food loss.           ,              Food loss is widely recognized as undermining food security and environmental sustainability. However, consumption of resource-intensive food items instead of more efficient, equally nutritious alternatives can also be considered as an effective food loss. Here we define and quantify these opportunity food losses as the food loss associated with consuming resource-intensive animal-based items instead of plant-based alternatives which are nutritionally comparable, e.g., in terms of protein content. We consider replacements that minimize cropland use for each of the main US animal-based food categories. We find that although the characteristic conventional retail-to-consumer food losses are {$\approx$}30\% for plant and animal products, the opportunity food losses of beef, pork, dairy, poultry, and eggs are 96\%, 90\%, 75\%, 50\%, and 40\%, respectively. This arises because plant-based replacement diets can produce 20-fold and twofold more nutritionally similar food per cropland than beef and eggs, the most and least resource-intensive animal categories, respectively. Although conventional and opportunity food losses are both targets for improvement, the high opportunity food losses highlight the large potential savings beyond conventionally defined food losses. Concurrently replacing all animal-based items in the US diet with plant-based alternatives will add enough food to feed, in full, 350 million additional people, well above the expected benefits of eliminating all supply chain food waste. These results highlight the importance of dietary shifts to improving food availability and security.},
   langid = {english},
   keywords = {ObsCite},
@@ -504,9 +580,29 @@
   pages = {566--575},
   issn = {2152-2197, 2152-2219},
   doi = {10.4236/jep.2014.56058},
+  urldate = {2022-06-18},
   keywords = {ObsCite},
   annotation = {10 citations (Crossref) [2022-07-01]},
   file = {/Users/nashsauter/Zotero/storage/6RWUF9A6/Singh et al. - 2014 - Environmental and Health Impacts from Slaughter Ho.pdf}
+}
+
+@article{slade2023,
+  title = {The {{Psychological Impact}} of {{Slaughterhouse Employment}}: {{A Systematic Literature Review}}},
+  shorttitle = {The {{Psychological Impact}} of {{Slaughterhouse Employment}}},
+  author = {Slade, Jessica and Alleyne, Emma},
+  year = {2023},
+  month = apr,
+  journal = {Trauma, Violence, \& Abuse},
+  volume = {24},
+  number = {2},
+  pages = {429--440},
+  issn = {1524-8380, 1552-8324},
+  doi = {10.1177/15248380211030243},
+  urldate = {2023-05-17},
+  abstract = {The role of a slaughterhouse worker (SHW) involves the authorized killing of living beings, yet there is limited understanding of the consequences this behavior has on their well-being. The purpose of this systematic review is to collate and evaluate the current literature on the psychological impact of slaughterhouse employment. Fourteen studies met the specific a priori inclusion criteria. The findings from this review were demarcated by the focus of studies: (1) the prevalence of mental health disorders, (2) the types of coping mechanisms used, and (3) the link between slaughterhouse employment and crime perpetration. It was found that SHWs have a higher prevalence rate of mental health issues, in particular depression and anxiety, in addition to violence-supportive attitudes. Furthermore, the workers employ a variety of both adaptive and maladaptive strategies to cope with the workplace environment and associated stressors. Finally, there is some evidence that slaughterhouse work is associated with increased crime levels. The research reviewed has shown a link between slaughterhouse work and antisocial behavior generally and sexual offending specifically. There was no support for such an association with violent crimes, however. Based on existing research, we suggest future directions for research (i.e., applying more methodological rigor) but highlight key findings for practitioners and policymakers that warrant attention.},
+  langid = {english},
+  annotation = {1 citations (Crossref) [2023-05-17]},
+  file = {/Users/nashsauter/Zotero/storage/GB3H7UKD/Slade and Alleyne - 2023 - The Psychological Impact of Slaughterhouse Employm.pdf;/Users/nashsauter/Zotero/storage/INHLNBP7/Slade and Alleyne - 2023 - The Psychological Impact of Slaughterhouse Employm.pdf}
 }
 
 @article{springmann2016,
@@ -520,6 +616,7 @@
   pages = {4146--4151},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.1523119113},
+  urldate = {2022-06-18},
   abstract = {Significance             The food system is responsible for more than a quarter of all greenhouse gas emissions while unhealthy diets and high body weight are among the greatest contributors to premature mortality. Our study provides a comparative analysis of the health and climate change benefits of global dietary changes for all major world regions. We project that health and climate change benefits will both be greater the lower the fraction of animal-sourced foods in our diets. Three quarters of all benefits occur in developing countries although the per capita impacts of dietary change would be greatest in developed countries. The monetized value of health improvements could be comparable with, and possibly larger than, the environmental benefits of the avoided damages from climate change.           ,              What we eat greatly influences our personal health and the environment we all share. Recent analyses have highlighted the likely dual health and environmental benefits of reducing the fraction of animal-sourced foods in our diets. Here, we couple for the first time, to our knowledge, a region-specific global health model based on dietary and weight-related risk factors with emissions accounting and economic valuation modules to quantify the linked health and environmental consequences of dietary changes. We find that the impacts of dietary changes toward less meat and more plant-based diets vary greatly among regions. The largest absolute environmental and health benefits result from diet shifts in developing countries whereas Western high-income and middle-income countries gain most in per capita terms. Transitioning toward more plant-based diets that are in line with standard dietary guidelines could reduce global mortality by 6\textendash 10\% and food-related greenhouse gas emissions by 29\textendash 70\% compared with a reference scenario in 2050. We find that the monetized value of the improvements in health would be comparable with, or exceed, the value of the environmental benefits although the exact valuation method used considerably affects the estimated amounts. Overall, we estimate the economic benefits of improving diets to be 1\textendash 31 trillion US dollars, which is equivalent to 0.4\textendash 13\% of global gross domestic product (GDP) in 2050. However, significant changes in the global food system would be necessary for regional diets to match the dietary patterns studied here.},
   langid = {english},
   keywords = {ObsCite,read},
@@ -537,6 +634,7 @@
   pages = {203--219},
   issn = {11877863},
   doi = {10/cm87nx},
+  urldate = {2022-01-26},
   annotation = {258 citations (Crossref) [2022-07-01]}
 }
 
@@ -551,6 +649,7 @@
   pages = {139353},
   issn = {00489697},
   doi = {10.1016/j.scitotenv.2020.139353},
+  urldate = {2022-11-23},
   langid = {english},
   keywords = {todo},
   annotation = {34 citations (Crossref) [2022-11-23]},
@@ -568,6 +667,7 @@
   pages = {20260--20264},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.1116437108},
+  urldate = {2022-11-24},
   abstract = {Global food demand is increasing rapidly, as are the environmental impacts of agricultural expansion. Here, we project global demand for crop production in 2050 and evaluate the environmental impacts of alternative ways that this demand might be met. We find that per capita demand for crops, when measured as caloric or protein content of all crops combined, has been a similarly increasing function of per capita real income since 1960. This relationship forecasts a 100\textendash 110\% increase in global crop demand from 2005 to 2050. Quantitative assessments show that the environmental impacts of meeting this demand depend on how global agriculture expands. If current trends of greater agricultural intensification in richer nations and greater land clearing (extensification) in poorer nations were to continue, {$\sim$}1 billion ha of land would be cleared globally by 2050, with CO               2               -C equivalent greenhouse gas emissions reaching {$\sim$}3 Gt y               -1               and N use {$\sim$}250 Mt y               -1               by then. In contrast, if 2050 crop demand was met by moderate intensification focused on existing croplands of underyielding nations, adaptation and transfer of high-yielding technologies to these croplands, and global technological improvements, our analyses forecast land clearing of only {$\sim$}0.2 billion ha, greenhouse gas emissions of {$\sim$}1 Gt y               -1               , and global N use of {$\sim$}225 Mt y               -1               . Efficient management practices could substantially lower nitrogen use. Attainment of high yields on existing croplands of underyielding nations is of great importance if global crop demand is to be met with minimal environmental impacts.},
   langid = {english},
   keywords = {reading},
@@ -610,6 +710,7 @@
   pages = {17},
   issn = {2296-7745},
   doi = {10.3389/fmars.2018.00098},
+  urldate = {2022-06-18},
   keywords = {ObsCite},
   annotation = {25 citations (Crossref) [2022-07-01]},
   file = {/Users/nashsauter/Zotero/storage/ZE575LCB/Victorero et al. - 2018 - Out of Sight, But Within Reach A Global History o.pdf}
@@ -626,6 +727,7 @@
   pages = {3508--3513},
   issn = {0013-936X, 1520-5851},
   doi = {10.1021/es702969f},
+  urldate = {2022-06-18},
   langid = {english},
   keywords = {ObsCite,reading},
   annotation = {634 citations (Crossref) [2022-07-01]},
@@ -643,6 +745,7 @@
   pages = {1416--1421},
   issn = {0036-8075, 1095-9203},
   doi = {10.1126/science.abo2364},
+  urldate = {2022-11-24},
   abstract = {Without rapid changes to agriculture and food systems, the goals of the 2015 Paris Agreement on climate change will not be met. Food systems are one of the most important contributors to greenhouse gas (GHG) emissions, but they also need to be adapted to cope with climate change impacts. Although many options exist to reduce GHG emissions in the food system, efforts to develop implementable transformation pathways are hampered by a combination of structural challenges such as fragmented decision-making, vested interests, and power imbalances in the climate policy and food communities, all of which are compounded by a lack of joint vision. New processes and governance arrangements are urgently needed for dealing with potential trade-offs among mitigation options and their food security implications.},
   langid = {english},
   annotation = {4 citations (Crossref) [2022-11-24]},
