--- a/content/post/2022-11-23-animalenv/bib.bib
+++ b/content/post/2022-11-23-animalenv/bib.bib
@@ -4,6 +4,7 @@
   year = {2022},
   month = aug,
   journal = {Pew Research Center's Global Attitudes Project},
+  urldate = {2022-11-23},
   abstract = {Despite the many depressing stories dominating the international news cycle, there is also a note of positivity among survey respondents in views of the UN, the benefits of international cooperation for solving problems and the importance of common values for bringing nations together.},
   langid = {american},
   file = {/Users/nashsauter/Zotero/storage/LPBPXRMJ/climate-change-remains-top-global-threat-across-19-country-survey.html}
@@ -16,6 +17,7 @@
   month = may,
   journal = {The Guardian},
   issn = {0261-3077},
+  urldate = {2022-06-20},
   abstract = {Biggest analysis to date reveals huge footprint of livestock - it provides just 18\% of calories but takes up 83\% of farmland},
   chapter = {Environment},
   langid = {british},
@@ -34,6 +36,7 @@
   pages = {064016},
   issn = {1748-9326},
   doi = {10.1088/1748-9326/aa6cd5},
+  urldate = {2022-06-25},
   keywords = {Antinet,read},
   annotation = {422 citations (Crossref) [2022-07-01]},
   file = {/Users/nashsauter/Zotero/storage/EJBL8NNB/Clark and Tilman - 2017 - Comparative analysis of environmental impacts of a.pdf}
@@ -50,6 +53,7 @@
   pages = {705--708},
   issn = {0036-8075, 1095-9203},
   doi = {10.1126/science.aba7357},
+  urldate = {2022-11-24},
   abstract = {Thought for food                            To have any hope of meeting the central goal of the Paris Agreement, which is to limit global warming to 2\textdegree C or less, our carbon emissions must be reduced considerably, including those coming from agriculture. Clark               et al.               show that even if fossil fuel emissions were eliminated immediately, emissions from the global food system alone would make it impossible to limit warming to 1.5\textdegree C and difficult even to realize the 2\textdegree C target. Thus, major changes in how food is produced are needed if we want to meet the goals of the Paris Agreement.                                         Science               , this issue p.               705                        ,              Concerted efforts to mitigate greenhouse gas emissions from food production are necessary to limit increases in global temperature.           ,              The Paris Agreement's goal of limiting the increase in global temperature to 1.5\textdegree{} or 2\textdegree C above preindustrial levels requires rapid reductions in greenhouse gas emissions. Although reducing emissions from fossil fuels is essential for meeting this goal, other sources of emissions may also preclude its attainment. We show that even if fossil fuel emissions were immediately halted, current trends in global food systems would prevent the achievement of the 1.5\textdegree C target and, by the end of the century, threaten the achievement of the 2\textdegree C target. Meeting the 1.5\textdegree C target requires rapid and ambitious changes to food systems as well as to all nonfood sectors. The 2\textdegree C target could be achieved with less-ambitious changes to food systems, but only if fossil fuel and other nonfood emissions are eliminated soon.},
   langid = {english},
   annotation = {247 citations (Crossref) [2022-11-24]},
@@ -67,6 +71,7 @@
   pages = {198--209},
   issn = {2662-1355},
   doi = {10.1038/s43016-021-00225-9},
+  urldate = {2022-06-27},
   langid = {english},
   keywords = {Antinet,read},
   annotation = {212 citations (Crossref) [2022-07-01]},
@@ -81,6 +86,7 @@
   month = jan,
   institution = {{Food Climate Research Network}},
   doi = {10.56661/47e58c32},
+  urldate = {2023-02-02},
   abstract = {The global growth in the production of soy and its use for different types of foods has been, and continues to be, a major contributor to land use change in the Amazon and other regions in South America. This building block explores the connections between soy, land use change, and discussions on animal- versus plant-based protein sources.},
   file = {/Users/nashsauter/Zotero/storage/NPRWYJU5/Fraanje et al. - 2020 - Soy food, feed, and land use change.pdf}
 }
@@ -97,6 +103,7 @@
   pages = {716--738},
   issn = {14647931},
   doi = {10.1111/brv.12251},
+  urldate = {2022-06-24},
   langid = {english},
   annotation = {64 citations (Crossref) [2022-07-01]},
   file = {/Users/nashsauter/Zotero/storage/FYQHCN7P/German et al. - 2017 - Relationships among multiple aspects of agricultur.pdf}
@@ -114,6 +121,7 @@
   pages = {381--391},
   issn = {0948-3349, 1614-7502},
   doi = {10.1007/s11367-009-0091-7},
+  urldate = {2022-06-18},
   langid = {english},
   keywords = {ObsCite},
   annotation = {80 citations (Crossref) [2022-07-01]},
@@ -135,6 +143,7 @@
   year = {21},
   month = feb,
   journal = {National Ocean Service},
+  urldate = {2022-06-24},
   abstract = {Eutrophication is a big word that describes a big problem in the nation's estuaries. Harmful algal blooms, dead zones, and fish kills are the results of the eutrophication process\textemdash which begins with the increased load of nutrients to estuaries and coastal waters.},
   howpublished = {https://oceanservice.noaa.gov/facts/eutrophication.html},
   langid = {american},
@@ -148,6 +157,7 @@
   year = {2020},
   month = sep,
   journal = {The Independent},
+  urldate = {2022-06-20},
   abstract = {Avoiding meat and dairy could reduce your carbon footprint from food by nearly three-quarters},
   chapter = {Lifestyle},
   langid = {english},
@@ -166,6 +176,7 @@
   pages = {987--992},
   issn = {0036-8075, 1095-9203},
   doi = {10.1126/science.aaq0216},
+  urldate = {2022-06-18},
   abstract = {The global impacts of food production             Food is produced and processed by millions of farmers and intermediaries globally, with substantial associated environmental costs. Given the heterogeneity of producers, what is the best way to reduce food's environmental impacts? Poore and Nemecek consolidated data on the multiple environmental impacts of {$\sim$}38,000 farms producing 40 different agricultural goods around the world in a meta-analysis comparing various types of food production systems. The environmental cost of producing the same goods can be highly variable. However, this heterogeneity creates opportunities to target the small numbers of producers that have the most impact.                            Science               , this issue p.               987                        ,              Food producer heterogeneity on a global level creates mitigation opportunities with respect to environmental damage caused by food production.           ,              Food's environmental impacts are created by millions of diverse producers. To identify solutions that are effective under this heterogeneity, we consolidated data covering five environmental indicators; 38,700 farms; and 1600 processors, packaging types, and retailers. Impact can vary 50-fold among producers of the same product, creating substantial mitigation opportunities. However, mitigation is complicated by trade-offs, multiple ways for producers to achieve low impacts, and interactions throughout the supply chain. Producers have limits on how far they can reduce impacts. Most strikingly, impacts of the lowest-impact animal products typically exceed those of vegetable substitutes, providing new evidence for the importance of dietary change. Cumulatively, our findings support an approach where producers monitor their own impacts, flexibly meet environmental targets by choosing from multiple practices, and communicate their impacts to consumers.},
   langid = {english},
   keywords = {Antinet,ObsCite,read},
@@ -184,6 +195,7 @@
   pages = {319--328},
   issn = {2398-9629},
   doi = {10.1038/s41893-020-0483-z},
+  urldate = {2022-06-18},
   langid = {english},
   keywords = {ObsCite},
   annotation = {30 citations (Crossref) [2022-07-01]},
@@ -197,6 +209,7 @@
   year = {2020},
   month = jan,
   journal = {Our World in Data},
+  urldate = {2022-06-24},
   abstract = {`Eat local' is a common recommendation to reduce the carbon footprint of your diet. But transport tends to account for a small share of greenhouse gas emissions. How does the impact of what you eat compare to where it's come from?},
   howpublished = {https://ourworldindata.org/food-choice-vs-eating-local},
   keywords = {Antinet,read},
@@ -214,6 +227,7 @@
   pages = {179--192},
   issn = {0165-0009, 1573-1480},
   doi = {10.1007/s10584-014-1169-1},
+  urldate = {2022-06-18},
   langid = {english},
   keywords = {Antinet,ObsCite,read},
   annotation = {290 citations (Crossref) [2022-07-01]},
@@ -231,6 +245,7 @@
   pages = {3804--3809},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.1713820115},
+  urldate = {2022-06-18},
   abstract = {Significance             With a third of all food production lost via leaky supply chains or spoilage, food loss is a key contributor to global food insecurity. Demand for resource-intensive animal-based food further limits food availability. In this paper, we show that plant-based replacements for each of the major animal categories in the United States (beef, pork, dairy, poultry, and eggs) can produce twofold to 20-fold more nutritionally similar food per unit cropland. Replacing all animal-based items with plant-based replacement diets can add enough food to feed 350 million additional people, more than the expected benefits of eliminating all supply chain food loss.           ,              Food loss is widely recognized as undermining food security and environmental sustainability. However, consumption of resource-intensive food items instead of more efficient, equally nutritious alternatives can also be considered as an effective food loss. Here we define and quantify these opportunity food losses as the food loss associated with consuming resource-intensive animal-based items instead of plant-based alternatives which are nutritionally comparable, e.g., in terms of protein content. We consider replacements that minimize cropland use for each of the main US animal-based food categories. We find that although the characteristic conventional retail-to-consumer food losses are {$\approx$}30\% for plant and animal products, the opportunity food losses of beef, pork, dairy, poultry, and eggs are 96\%, 90\%, 75\%, 50\%, and 40\%, respectively. This arises because plant-based replacement diets can produce 20-fold and twofold more nutritionally similar food per cropland than beef and eggs, the most and least resource-intensive animal categories, respectively. Although conventional and opportunity food losses are both targets for improvement, the high opportunity food losses highlight the large potential savings beyond conventionally defined food losses. Concurrently replacing all animal-based items in the US diet with plant-based alternatives will add enough food to feed, in full, 350 million additional people, well above the expected benefits of eliminating all supply chain food waste. These results highlight the importance of dietary shifts to improving food availability and security.},
   langid = {english},
   keywords = {ObsCite},
@@ -249,6 +264,7 @@
   pages = {566--575},
   issn = {2152-2197, 2152-2219},
   doi = {10.4236/jep.2014.56058},
+  urldate = {2022-06-18},
   keywords = {ObsCite},
   annotation = {10 citations (Crossref) [2022-07-01]},
   file = {/Users/nashsauter/Zotero/storage/6RWUF9A6/Singh et al. - 2014 - Environmental and Health Impacts from Slaughter Ho.pdf}
@@ -265,6 +281,7 @@
   pages = {4146--4151},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.1523119113},
+  urldate = {2022-06-18},
   abstract = {Significance             The food system is responsible for more than a quarter of all greenhouse gas emissions while unhealthy diets and high body weight are among the greatest contributors to premature mortality. Our study provides a comparative analysis of the health and climate change benefits of global dietary changes for all major world regions. We project that health and climate change benefits will both be greater the lower the fraction of animal-sourced foods in our diets. Three quarters of all benefits occur in developing countries although the per capita impacts of dietary change would be greatest in developed countries. The monetized value of health improvements could be comparable with, and possibly larger than, the environmental benefits of the avoided damages from climate change.           ,              What we eat greatly influences our personal health and the environment we all share. Recent analyses have highlighted the likely dual health and environmental benefits of reducing the fraction of animal-sourced foods in our diets. Here, we couple for the first time, to our knowledge, a region-specific global health model based on dietary and weight-related risk factors with emissions accounting and economic valuation modules to quantify the linked health and environmental consequences of dietary changes. We find that the impacts of dietary changes toward less meat and more plant-based diets vary greatly among regions. The largest absolute environmental and health benefits result from diet shifts in developing countries whereas Western high-income and middle-income countries gain most in per capita terms. Transitioning toward more plant-based diets that are in line with standard dietary guidelines could reduce global mortality by 6\textendash 10\% and food-related greenhouse gas emissions by 29\textendash 70\% compared with a reference scenario in 2050. We find that the monetized value of the improvements in health would be comparable with, or exceed, the value of the environmental benefits although the exact valuation method used considerably affects the estimated amounts. Overall, we estimate the economic benefits of improving diets to be 1\textendash 31 trillion US dollars, which is equivalent to 0.4\textendash 13\% of global gross domestic product (GDP) in 2050. However, significant changes in the global food system would be necessary for regional diets to match the dietary patterns studied here.},
   langid = {english},
   keywords = {ObsCite,read},
@@ -283,6 +300,7 @@
   pages = {139353},
   issn = {00489697},
   doi = {10.1016/j.scitotenv.2020.139353},
+  urldate = {2022-11-23},
   langid = {english},
   keywords = {todo},
   annotation = {34 citations (Crossref) [2022-11-23]},
@@ -300,6 +318,7 @@
   pages = {20260--20264},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.1116437108},
+  urldate = {2022-11-24},
   abstract = {Global food demand is increasing rapidly, as are the environmental impacts of agricultural expansion. Here, we project global demand for crop production in 2050 and evaluate the environmental impacts of alternative ways that this demand might be met. We find that per capita demand for crops, when measured as caloric or protein content of all crops combined, has been a similarly increasing function of per capita real income since 1960. This relationship forecasts a 100\textendash 110\% increase in global crop demand from 2005 to 2050. Quantitative assessments show that the environmental impacts of meeting this demand depend on how global agriculture expands. If current trends of greater agricultural intensification in richer nations and greater land clearing (extensification) in poorer nations were to continue, {$\sim$}1 billion ha of land would be cleared globally by 2050, with CO               2               -C equivalent greenhouse gas emissions reaching {$\sim$}3 Gt y               -1               and N use {$\sim$}250 Mt y               -1               by then. In contrast, if 2050 crop demand was met by moderate intensification focused on existing croplands of underyielding nations, adaptation and transfer of high-yielding technologies to these croplands, and global technological improvements, our analyses forecast land clearing of only {$\sim$}0.2 billion ha, greenhouse gas emissions of {$\sim$}1 Gt y               -1               , and global N use of {$\sim$}225 Mt y               -1               . Efficient management practices could substantially lower nitrogen use. Attainment of high yields on existing croplands of underyielding nations is of great importance if global crop demand is to be met with minimal environmental impacts.},
   langid = {english},
   keywords = {reading},
@@ -328,6 +347,7 @@
   pages = {17},
   issn = {2296-7745},
   doi = {10.3389/fmars.2018.00098},
+  urldate = {2022-06-18},
   keywords = {ObsCite},
   annotation = {25 citations (Crossref) [2022-07-01]},
   file = {/Users/nashsauter/Zotero/storage/ZE575LCB/Victorero et al. - 2018 - Out of Sight, But Within Reach A Global History o.pdf}
@@ -344,6 +364,7 @@
   pages = {3508--3513},
   issn = {0013-936X, 1520-5851},
   doi = {10.1021/es702969f},
+  urldate = {2022-06-18},
   langid = {english},
   keywords = {ObsCite,reading},
   annotation = {634 citations (Crossref) [2022-07-01]},
@@ -361,6 +382,7 @@
   pages = {1416--1421},
   issn = {0036-8075, 1095-9203},
   doi = {10.1126/science.abo2364},
+  urldate = {2022-11-24},
   abstract = {Without rapid changes to agriculture and food systems, the goals of the 2015 Paris Agreement on climate change will not be met. Food systems are one of the most important contributors to greenhouse gas (GHG) emissions, but they also need to be adapted to cope with climate change impacts. Although many options exist to reduce GHG emissions in the food system, efforts to develop implementable transformation pathways are hampered by a combination of structural challenges such as fragmented decision-making, vested interests, and power imbalances in the climate policy and food communities, all of which are compounded by a lack of joint vision. New processes and governance arrangements are urgently needed for dealing with potential trade-offs among mitigation options and their food security implications.},
   langid = {english},
   annotation = {4 citations (Crossref) [2022-11-24]},
